--- a/components/SearchPopup/SearchPopup.sass
+++ b/components/SearchPopup/SearchPopup.sass
@@ -1,6 +1,5 @@
 .no-scroll
     overflow: hidden
-    padding-right: 17px
 
 
 .search-overlay 
